<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_course"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/sample_image_banner"/>

    <TextView
        android:id="@+id/tv_title_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_course"
        tools:text="@string/sample_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_category_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sample_category"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_course"/>

    <TextView
        android:id="@+id/tv_description_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/sample_desc_course"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_1"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_like"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/gray_rounded_corner"
        android:src="@drawable/like_button"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_course"
        app:layout_constraintBottom_toTopOf="@id/btn_start"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_color_rounded_corner"
        android:text="@string/mulai_belajar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_like"/>

</androidx.constraintlayout.widget.ConstraintLayout>